[package]
name = "kuckucksuhr"
version = "0.1.0"
authors = ["Cthulhux <git@tuxproject.de>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.22", features = ["macros", "rt-threaded"] }
egg-mode = { version = "0.15", features = ["rustls"], default-features = false }
config = { version = "0.10", features = ["toml"] }
chrono = "0.4"
rand = "0.7.3"
